--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "web-vitals": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.33.2"
   },
@@ -39,7 +41,13 @@
       "last 1 safari version"
     ]
   },
-  "keywords": ["luxury", "homes", "rentals", "frontend"],
+  "keywords": [
+    "luxury",
+    "homes",
+    "rentals",
+    "frontend"
+  ],
   "author": "Shak Gillani",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://luxurycarservices-1.onrender.com/"
 }
